--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
   },
   "homepage": "https://github.com/Rafase282/URL-Shortener#readme",
   "dependencies": {
+    "dotenv": "^1.2.0",
     "express": "^4.13.3",
     "mongodb": "^2.1.4"
   },
