--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
   "dependencies": {
     "dotenv": "^1.2.0",
     "express": "^4.13.3",
+    "jade": "^1.11.0",
     "mongodb": "^2.1.4",
     "valid-url": "^1.0.9"
   },
