--- a/package.json
+++ b/package.json
@@ -25,8 +25,7 @@
     "dotenv": "^1.2.0",
     "express": "^4.13.3",
     "jade": "^1.11.0",
-    "mongodb": "^2.1.4",
-    "valid-url": "^1.0.9"
+    "mongodb": "^2.1.4"
   },
   "devDependencies": {
     "nodemon": "^1.8.1"
