--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "url-shortener",
+  "name": "url-shortener-r282",
   "version": "0.0.2",
   "description": "Pass a URL as a parameter and receive a shortened URL in the JSON response.",
   "main": "server.js",
